--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="stylesheet" href="{{ asset('https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css') }}">
+    {% block stylesheets %}{% endblock %}
+    
+</head>
+<body>
+    <ul class="nav nav-pills">
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('article_index') }}">Accueil</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('category_index') }}">Catégories</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('article_new') }}">Nouvel article</a>
+        </li>
+    </ul>
+
+    {% block body %}{% endblock %}
+    <script src="{{asset('https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css') }}"></script>
+    {% block javascripts %}{% endblock %}
+    
+</body>
+</html
